<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tt.app.texttime.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/welcome"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="25dp"
        android:src="@drawable/mark_red" />

    <TextView
        android:id="@+id/your_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_image"
        android:layout_alignTop="@+id/profile_image"
        android:layout_toRightOf="@+id/profile_image"
        android:padding="5dp"
        android:text="@string/countrycode"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/send_verify_code"
        android:layout_alignRight="@+id/send_verify_code"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/enter_phone_number"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/send_verify_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phonenumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/send_verify_code" />

</RelativeLayout>