<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
<ImageView
        android:id="@+id/profileimage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:src="@drawable/noi" />

<EditText
    android:id="@+id/password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/profileimage"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="82dp"
    android:ems="10"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:maxLines="1" >

    <requestFocus />
</EditText>

<TextView
    android:id="@+id/username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/profileimage"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="17dp"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textSize="22sp" />

<TextView
    android:id="@+id/no_user"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/password"
    android:layout_below="@+id/password"
    android:layout_marginTop="25dp"
    android:text="@string/not"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textSize="22sp" />

<TextView
    android:id="@+id/welcome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="24dp"
    android:gravity="center_horizontal"
    android:text="@string/welcome_back"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textSize="22sp" />

</RelativeLayout>